removed junk css and hopefully fixed squashed headshot

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1,178 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700&display=swap');
 
-@media screen and (max-width: 600px) {
-	.menu-items {
-		display: none;
-		overflow: hidden;
-	}
-
-	.menu-items.hmb {
-		display: block;
-		background-color: white;
-		position: absolute;
-		left: 0;
-		top: 2.5em;
-		
-	}
-	
-	.menu-items.hmb a {
-		display: block;
-		position: relative;
-		text-align: center;
-		float: none;
-	}
-
-	.menu-toggle {
-		display: block;
-		position: absolute;
-		top: 8px;
-		right: 16px;
-		padding: 0;
-		margin: 0;
-	}
-
-	#tog-bar {
-		margin: 0;
-		padding: 0;
-		cursor: pointer;
-	}
-}
-
 body {
 	font-family: 'Source Sans Pro';
-}
-
-header {
-	padding: 1em;
-	display: flex;
-	justify-content: space-between;
-	width: calc(100% - 2em);
-	background: white;
-	position: fixed;
-	z-index: 100;
-}
-
-header a {
-	text-decoration: none;
-	color: black;
-}
-
-header a.logo {
-	font-weight: bold;
-	text-transform: uppercase;
-}
-
-header nav ul {
-	list-style-type: none;
-	display: flex;
-	justify-content: space-around;
-	width: 100%;
-	margin: 0;
-	padding: 0;
-}
-
-header nav ul li a{
-	padding: 1em;
-}
-
-.parent {
-	display: grid;
-	grid-template-columns: auto;
-}
-
-.parent section {
-	padding: 3em;
-}
-
-.parent section h1, .parent section h2, .parent section .act-but {
-	margin: 0;
-	text-transform: uppercase;
-}
-
-.parent section .act-but{
-	text-decoration: none;
-	color: black;
-}
-
-.parent section .act-but:hover {
-	color: red;
-}
-
-.parent section h2 {
-	font-size: 1.3rem;
-}
-
-.parent section.init-pic {
-	padding: 40em 8em 8em 8em;
-	background: url('../campus_!overview_fall.jpg');
-	background-repeat: no-repeat;
-	background-size: cover;
-	text-align: center;
-}
-
-.parent section.init-pic .inner {
-	text-align: center;
-	color: white;
-	position: relative;
-	top: -250px;
-}
-
-.parent section.init-pic p {
-	text-align: center;
-	font-size: 1.2rem;
-	margin-bottom: 0;
-	color: white;
-}
-
-.parent section.init-pic h2 {
-	text-align: center;
-}
-
-.parent section.about {
-	background-color: rgb(128, 148, 93);
-}
-
-.parent section.about .inner .headshot {
-	background-image: url('../cb_headshot.png');
-	background-repeat: no-repeat;
-	background-size: cover;
-	width: 300px;
-	height: 300px;
-	border: 1px;
-	border-style: ridge;
-}
-
-.parent section.projects {
-	background-color: bisque;
-}
-
-.parent nav ul {
-	list-style-type: none;
-	display: grid;
-}
-
-.parent section.contact {
-	background-color: darkgray;
-}
-
-.parent section.contact nav ul {
-	display: flex;
-	position: relative;
-	align-items: center;
-	justify-content: center;
-	right: 20px;
-}
-
-.parent section.contact nav ul li{
-	padding-left: 20px;
-	padding-right: 20px;
-}
-
-.parent section.contact a {
-	background-repeat: no-repeat;
-	display: block;
-	width: 64px;
-	height: 64px;
 }
 
 .remove-all-margin{
@@ -183,5 +12,7 @@ header nav ul li a{
 .card-img-top.headshot {
 	padding: 1em;
 	width: 400px;
+	height: auto;
 }
+
 
